@@ -1,6 +1,6 @@
 /* tool.c --- Command line interface to libykclient.
  *
- * Copyright (c) 2006-2012 Yubico AB
+ * Copyright (c) 2006-2013 Yubico AB
  * Copyright (c) 2012 Secure Mission Solutions
  * All rights reserved.
  *
@@ -40,26 +40,41 @@
 #include <getopt.h>
 
 const char *usage =
-  "Usage: ykclient [options] <client_id> <yubikey_otp>\n"
-  "  client_id: your client id integer\n"
-  "  yubikey_otp: One-time password generated by yubikey\n"
+  "Usage: ykclient [OPTION]... CLIENTID YUBIKEYOTP\n"
+  "Validate the YUBIKEYOTP one-time-password against the YubiCloud\n"
+  "using CLIENTID as the client identifier.\n"
   "\n"
-  "  Options :\n"
-  "    --url URL		Validation service URL (eg: \"http://api.yubico.com/wsapi/verify?id=%d&otp=%s\")\n"
-  "    --ca CA			Path to directory containing the CAs (eg: \"/usr/local/etc/CERTS\")\n"
-  "    --apikey Key		API key for HMAC validation of request/response\n";
+  "Mandatory arguments to long options are mandatory for short options too.\n"
+  "    --help         Display this help screen\n"
+  "    --version      Display version information\n"
+  "\n"
+  "    --debug        Print debugging information\n"
+  "    --url URL      Validation service URL, for example,\n"
+  "                   \"http://api.yubico.com/wsapi/verify?id=%d&otp=%s\"\n"
+  "    --ca CADIR     Path to directory containing Certificate Authoritity,\n"
+  "                   e.g., \"/usr/local/etc/CERTS\"\n"
+  "    --apikey Key   API key for HMAC validation of request/response\n"
+  "\n"
+  "Exit status is 0 on success, 1 if there is a hard failure, 2 if the\n"
+  "OTP was replayed, 3 for other soft OTP-related failures.\n"
+  "\n"
+  "Report bugs at <https://github.com/Yubico/yubico-c-client>.\n";
 
 static struct option long_options[] = {
   {"url", 1, 0, 'u'},
   {"ca", 1, 0, 'c'},
   {"apikey", 1, 0, 'a'},
+  {"debug", 0, 0, 'd'},
+  {"help", 0, 0, 'h'},
+  {"version", 0, 0, 'V'},
   {0, 0, 0, 0}
 };
 
 /* Parse command line parameters. */
 static void
 parse_args (int argc, char *argv[],
-	    unsigned int *client_id, char **token, char **url, char **ca, char **api_key)
+	    unsigned int *client_id, char **token, char **url, char **ca,
+	    char **api_key, int *debug)
 {
   while (1)
     {
@@ -81,6 +96,11 @@ parse_args (int argc, char *argv[],
 	    }
 	  *api_key = optarg;
 	  break;
+
+	case 'd':
+	  *debug = 1;
+	  break;
+
 	case 'u':
 	  if (strncmp ("http://", optarg, 7) != 0
 	      && strncmp ("https://", optarg, 8) != 0)
@@ -90,21 +110,33 @@ parse_args (int argc, char *argv[],
 	    }
 	  *url = optarg;
 	  break;
+
 	case 'c':
 	  if (strlen (optarg) < 1)
 	    {
-	      fprintf (stderr, "error: must give a valid directory containing CAs");
+	      fprintf (stderr,
+		       "error: must give a valid directory containing CAs");
 	      exit (EXIT_FAILURE);
 	    }
 	  *ca = optarg;
+	  break;
+
+	case 'h':
+	  printf ("%s", usage);
+	  exit (EXIT_SUCCESS);
+	  break;
+
+	case 'V':
+	  printf ("%s\n", VERSION);
+	  exit (EXIT_SUCCESS);
 	  break;
 	}
     }
 
   if (argc - optind != 2)
     {
-      fprintf (stderr, "%s", usage);
-      exit (EXIT_FAILURE);
+      printf ("%s", usage);
+      exit (EXIT_SUCCESS);
     }
 
   /* Now get mandatory numeric client_id */
@@ -131,39 +163,44 @@ main (int argc, char *argv[])
 {
   unsigned int client_id;
   char *token, *url = NULL, *ca = NULL, *api_key = NULL;
+  int debug = 0;
   ykclient_rc ret;
   ykclient_t *ykc = NULL;
 
-  parse_args (argc, argv, &client_id, &token, &url, &ca, &api_key);
+  parse_args (argc, argv, &client_id, &token, &url, &ca, &api_key, &debug);
 
   if (ca)
-  {
-    ret = ykclient_init (&ykc);
-    if (ret != YKCLIENT_OK)
-      return EXIT_FAILURE;
+    {
+      ret = ykclient_init (&ykc);
+      if (ret != YKCLIENT_OK)
+	return EXIT_FAILURE;
 
-    ykclient_set_ca_path (ykc, ca);
-  }
+      ykclient_set_ca_path (ykc, ca);
+    }
 
-  /* Debug. */
-  fprintf (stderr, "Input:\n");
-  if (url)
-    fprintf (stderr, "  validation URL: %s\n", url);
-  if (ca)
-    fprintf (stderr, "  CA Path: %s\n", ca);
-  fprintf (stderr, "  client id: %d\n", client_id);
-  fprintf (stderr, "  token: %s\n", token);
-  if (api_key != NULL)
-    fprintf (stderr, "  api key: %s\n", api_key);
+  if (debug)
+    {
+      fprintf (stderr, "Input:\n");
+      if (url)
+	fprintf (stderr, "  validation URL: %s\n", url);
+      if (ca)
+	fprintf (stderr, "  CA Path: %s\n", ca);
+      fprintf (stderr, "  client id: %d\n", client_id);
+      fprintf (stderr, "  token: %s\n", token);
+      if (api_key != NULL)
+	fprintf (stderr, "  api key: %s\n", api_key);
+    }
 
-  ret =
-    ykclient_verify_otp_v2 ( ykc, token, client_id, NULL, 1,
-			    (const char **) &url, api_key);
+  ret = ykclient_verify_otp_v2 ( ykc, token, client_id, NULL, 1,
+				 (const char **) &url, api_key);
 
-  printf ("Verification output (%d): %s\n", ret, ykclient_strerror (ret));
+  if (debug)
+    printf ("Verification output (%d): %s\n", ret, ykclient_strerror (ret));
 
-  if (ret != YKCLIENT_OK)
-    return EXIT_FAILURE;
+  if (ret == YKCLIENT_REPLAYED_OTP)
+    return 2;
+  else if (ret != YKCLIENT_OK)
+    return 3;
 
   return EXIT_SUCCESS;
 }
