@@ -9,6 +9,10 @@ New symbols are YKCLIENT_VERSION_STRING, YKCLIENT_VERSION_NUMBER,
 YKCLIENT_VERSION_MAJOR, YKCLIENT_VERSION_MINOR,
 YKCLIENT_VERSION_PATCH.  New function ykclient_check_version.
 
+** ykclient: Cleanup command line tool a bit to make it more useful.
+Added --help, --version and --debug.  Defaults to silent output.  Exit
+codes are documented and more useful.  Added manpage.
+
 * Version 2.9 (released 2012-08-07)
 
 ** Compability with curl versions before 7.20.
